fix: navbar height on smaller screens

--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -60,7 +60,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    height: 100vh;
+    height: 45vh;
     width: 100%;
     transform-origin: top;
     background: #fff;
@@ -86,15 +86,16 @@
         @media screen and (max-width: 800px) {
           display: flex;
           flex-direction: column;
+          margin-top: 30px;
           position: fixed;
-          inset: 0;
-          height: 100vh;
+          left: 0;
+          height: 30vh;
           width: 100%;
-          padding: 200px 0;
           z-index: 18;
+          justify-content: space-around;
 
           li a {
-            font-size: 2rem;
+            font-size: 1rem;
             color: #000;
 
             &:after {
