--- a/containers/Events/Events.module.scss
+++ b/containers/Events/Events.module.scss
@@ -6,13 +6,13 @@
   }
 
   .events {
-    @apply grid grid-cols-3 gap-12;
+    @apply md:grid grid-cols-3 gap-12;
 
     .event {
-      @apply transition-transform hover:scale-110 cursor-pointer;
+      @apply my-[70px] md:my-0 transition-transform hover:scale-110 cursor-pointer;
 
       h4 {
-        @apply text-center font-josefin text-white font-bold text-xl mt-[20px];
+        @apply text-center font-josefin text-white font-bold text-lg mt-[20px] md:text-xl;
       }
     }
   }
