--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,5 +3,6 @@
 @tailwind utilities;
 
 body {
+  scroll-behavior: smooth;
   @apply bg-black;
 }
